# uri2voice

./: CHANGELOG.md  README.md  TODO.md  goal.yaml  pyproject.toml
tests/: conftest.py  test_uri2voice.py
uri2voice/: __init__.py  artifacts.py  voice_command.py
