[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "uri2voice"
version = "0.1.0"
description = "URI voice runtime — STT, TTS, voice command → nl2uri flow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
nl2uri = ["nl2uri"]

[project.scripts]
uri2voice = "uri2voice.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["uri2voice*"]
